2003-11-13  Jeffrey Stedfast  <fejj@ximian.com>

	* em-folder-selection.c: Rewritten to use EMFolderTRee.

	* mail-vfolder.c (vfolder_load_storage): Updated for function name
	changes in mail-component.c

	* mail-offline-handler.c: Updated for function name changes in
	mail-component.c

	* mail-account-gui.c (add_new_store): Fixed to not use EStorage.
	(mail_account_gui_save): Updated for function name changes.

	* em-account-prefs.c (account_delete_clicked): Updated for
	function name changes.
	(account_able_clicked): Same.
	(account_able_toggled): Same.

	* mail-component.c: Renamed mail_component_*storage*() functions
	to mail_component_*store*() since we are no longer dealing with
	storages, but instead with CamelStore's.
	(create_view_widget): If the user selects a store node, don't try
	to open it as a folder.

2003-11-13  Ettore Perazzoli  <ettore@ximian.com>

	* mail-component.c (impl_sendAndReceive): New, implementation for
	Evolution.Component.sendAndReceive.
	(mail_component_class_init): Install.

2003-11-13  Jeffrey Stedfast  <fejj@ximian.com>

	* mail-vfolder.c (context_rule_removed): Modified to not use
	EStorage* functions. I don't even think it *needs* to remove the
	folder from the mail-component, the mail-component should just
	pick it up automagically via CamelStore events.

	* em-folder-tree.[c,h]: New folder-tree widget that replaces the
	shell's folder-tree widget.

	* em-folder-tree-model.[c,h]: New source files subclassing
	GtkTreeStore for handling the mess that is drag&drop.

	* em-folder-selection-button.c: Ported to use EMFolderTree.

	* em-folder-selection.c: Ported to use EMFolderTree.

	* em-folder-selector.c: Ported to use EMFolderTree.

	* mail-component.c: Ported to use EMFolderTree.

	* mail-offline-handler.c (storage_go_online): Updated to not pass
	a storage argument.

	* mail-folder-cache.c: Removed storage stuff.

	* mail-send-recv.c (receive_update_got_store): Don't do EStorage*
	stuff anymore.
